[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/images/hero archer/archer-fall.png" type="Texture" id=1]
[ext_resource path="res://resources/preset fonts/DebugFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/menus/Buttons/CharacterSelectButton.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/UI/UI_Pressed.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxEmpty" id=2]

[node name="Archer" type="VBoxContainer"]
margin_right = 172.0
margin_bottom = 200.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Character" type="Button" parent="."]
margin_right = 172.0
margin_bottom = 166.0
custom_styles/pressed = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
icon = ExtResource( 1 )
flat = true

[node name="Name" type="Label" parent="."]
margin_top = 170.0
margin_right = 172.0
margin_bottom = 197.0
custom_fonts/font = ExtResource( 2 )
text = "Archer"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="Node" parent="."]

[node name="Clicked" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
[connection signal="focus_entered" from="Character" to="." method="_on_Character_focus_entered"]
[connection signal="focus_exited" from="Character" to="." method="_on_Character_focus_exited"]
[connection signal="mouse_entered" from="Character" to="." method="_on_Character_mouse_entered"]
[connection signal="mouse_exited" from="Character" to="." method="_on_Character_mouse_exited"]
[connection signal="pressed" from="Character" to="." method="_on_Character_pressed"]
